# python-mac-fan-control

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.windsurf/rules/: architecture.md  python.md  testing.md
helper/: Makefile  Package.swift  com.macfancontrol.smcwrite.plist
helper/Sources/SMCWriteLib/: CommandHandler.swift  HexUtils.swift  SMCDriver.swift  SMCDriverProtocol.swift  SMCKey.swift  SocketServer.swift
helper/Sources/smcwrite/: main.swift
helper/Tests/SMCWriteLibTests/: CommandHandlerTests.swift  HexUtilsTests.swift  SMCKeyTests.swift  SocketServerTests.swift
mac_fan_control/: __init__.py  cli.py  exceptions.py  fans.py  models.py  sensors.py  smc.py
tests/: conftest.py
tests/unit/: test_cli.py  test_fans.py  test_models.py  test_sensors.py  test_smc.py
